--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
     <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
     <script>
       (function(){
-        emailjs.init('ajeggNLZZg0_ryM6y'); // Your user ID here
+        emailjs.init('ajeggNLZZg0_ryM6y');
       })();
     </script>
 </head>
@@ -1216,7 +1216,7 @@
             <label for="contact-message">Mensaje</label>
             <textarea id="contact-message" name="message" rows="5" placeholder="Escribe tu mensaje aquí..." required aria-required="true"></textarea>
           </div>
-          <button type="submit" id="contact-submit">Enviar Mensaje</button>
+          <button type="submit">Enviar Mensaje</button>
           <div class="confirmation" id="contact-confirmation" role="alert" aria-live="polite" style="display:none;"></div>
         </form>
       </div>
@@ -2276,36 +2276,65 @@ Ofertas relacionadas:
 
       // Contact form submission handling with EmailJS integration
 
-       if (!message) {
-    alert('Por favor, escribe un mensaje.');
-    contactForm['message'].focus();
-    return;
-  }
-  const templateParams = {
-    user_name: name,
-    user_email: email,
-    user_phone: phone || "N/A",
-    message: message
-  };
-  submitButton.disabled = true;
-  submitButton.textContent = 'Enviando...';
-  emailjs.send('service_9s631mi', 'template_b5rg48c', templateParams)
-    .then(function(response) {
-      console.log('EmailJS success:', response.status, response.text);
-      contactConfirmation.textContent = 'Gracias por contactarme. Revisaré tu mensaje pronto.';
-      contactConfirmation.style.display = 'block';
-      contactForm.reset();
-      contactForm['name'].focus();
-    })
-    .catch(function(error) {
-      console.error('EmailJS failed:', error);
-      alert('Hubo un error al enviar el mensaje. Por favor, intenta de nuevo más tarde.');
-    })
-    .finally(function() {
-      submitButton.disabled = false;
-      submitButton.textContent = 'Enviar Mensaje';
-    });
-});
+      const contactForm = document.getElementById('contact-form');
+      const contactConfirmation = document.getElementById('contact-confirmation');
+
+      contactForm.addEventListener('submit', function(event) {
+        event.preventDefault();
+        contactConfirmation.style.display = 'none';
+        contactConfirmation.textContent = '';
+
+        const name = contactForm['name'].value.trim();
+        const email = contactForm['email'].value.trim();
+        const phone = contactForm['phone'].value.trim();
+        const message = contactForm['message'].value.trim();
+
+        // Basic validation
+        if (!name) {
+          alert('Por favor, ingresa tu nombre completo.');
+          contactForm['name'].focus();
+          return;
+        }
+        if (!email) {
+          alert('Por favor, ingresa un correo electrónico válido.');
+          contactForm['email'].focus();
+          return;
+        }
+        if (!message) {
+          alert('Por favor, escribe un mensaje.');
+          contactForm['message'].focus();
+          return;
+        }
+
+        // Prepare EmailJS params to match your template variables
+        const templateParams = {
+          user_name: name,
+          user_email: email,
+          user_phone: phone || "N/A",
+          message: message
+        };
+
+        // Disable submit button while sending
+        const submitButton = contactForm.querySelector('button[type="submit"]');
+        submitButton.disabled = true;
+        submitButton.textContent = 'Enviando...';
+
+        // Send email via EmailJS
+        emailjs.send('service_9s631mi', 'template_b5rg48c', templateParams)
+          .then(function(response) {
+            contactConfirmation.textContent = 'Gracias por contactarme. Revisaré tu mensaje pronto.';
+            contactConfirmation.style.display = 'block';
+            contactForm.reset();
+            contactForm['name'].focus();
+          }, function(error) {
+            alert('Hubo un error al enviar el mensaje. Por favor, intenta de nuevo más tarde.');
+            console.error('EmailJS error:', error);
+          })
+          .finally(() => {
+            submitButton.disabled = false;
+            submitButton.textContent = 'Enviar Mensaje';
+          });
+      });
     </script>
 </body>
 </html>
