--- a/index.html
+++ b/index.html
@@ -2314,6 +2314,9 @@ Ofertas relacionadas:
           message: message
         };
 
+          submitButton.disabled = true;
+  submitButton.textContent = 'Enviando...';
+
         // Send email via EmailJS
         emailjs.send('service_9s631mi', 'template_b5rg48c', templateParams)
           .then(function(response) {
