--- a/index.html
+++ b/index.html
@@ -1600,7 +1600,7 @@
         if (lowerName.includes('moto') || lowerName.includes('motocicleta')) {
           return `
 Ofertas relacionadas:
-- Motocicleta Italika 150Z – Q${amount.toFixed(2)} en <a href="https://www.elektra.com.gt/search/?query=motocicleta" target="_blank" rel="noopener noreferrer">Elektra</a> [Ver oferta]
+- Motocicleta Italika 150Z – Q${amount.toFixed(2)} en <a href="https://www.elektra.com.gt/moto-de-trabajo-125z-italika-negra/p" rel="noopener noreferrer">Elektra</a> [Ver oferta]
 - Motos usadas desde Q${(amount * 0.75).toFixed(2)} en <a href="https://www.olx.com.gt/motocicletas" target="_blank" rel="noopener noreferrer">OLX Guatemala</a> [Ver oferta]
 - Accesorios para motocicletas en <a href="https://www.amazon.com.mx/s?k=accesorios+motocicleta" target="_blank" rel="noopener noreferrer">Amazon</a> [Ver oferta]
           `;
