--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
         </div>
         <div class="contact-item">
           <span class="material-icons" aria-hidden="true">phone</span>
-          <a href="tel:+50212345678">+502 1234 5678</a>
+          <a href="tel:+50212345678">+502 3218 1393</a>
         </div>
         <div class="contact-item">
           <span class="material-icons" aria-hidden="true">location_on</span>
@@ -1601,7 +1601,7 @@
           return `
 Ofertas relacionadas:
 - Motocicleta Italika 150Z – Q${amount.toFixed(2)} en <a href="https://www.elektra.com.gt/moto-de-trabajo-125z-italika-negra/p" rel="noopener noreferrer">Elektra</a> [Ver oferta]
-- Motos usadas desde Q${(amount * 0.75).toFixed(2)} en <a href="https://www.olx.com.gt/motocicletas" target="_blank" rel="noopener noreferrer">OLX Guatemala</a> [Ver oferta]
+- Motos usadas desde Q${(amount * 0.75).toFixed(2)} en <a href="https://www.encuentra24.com/guatemala-es/autos-motos" target="_blank" rel="noopener noreferrer">OLX Guatemala</a> [Ver oferta]
 - Accesorios para motocicletas en <a href="https://www.amazon.com.mx/s?k=accesorios+motocicleta" target="_blank" rel="noopener noreferrer">Amazon</a> [Ver oferta]
           `;
         }
