--- a/index.html
+++ b/index.html
@@ -2263,12 +2263,17 @@ Ofertas relacionadas:
 
       let offers = [
         {
-          id: 1,
+         id: 1,
           title: "Motocicleta Italika 150Z",
           description: "Motocicleta Italika en excelente estado, modelo 2020, bajo kilometraje.",
           price: 13500,
           category: "motos",
-          image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/3e33dd73-5f6c-4298-9792-ff272e96e689.png",
+          image: "https://somosmoto.pe/images/models/gallery/italika-150sz-2018-gallery-578a72.jpg",
+          seller: {
+            name: "Juan Pérez",
+            phone: "+502 3218 1393",
+            email: "juanperez@gmail.com"
+          }
         },
         {
           id: 2,
@@ -2276,7 +2281,12 @@ Ofertas relacionadas:
           description: "Teléfono Apple iPhone 13 Pro, 128GB, color plata, casi nuevo.",
           price: 8500,
           category: "teléfonos",
-          image: "https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/762df5f4-1d99-4f2b-a076-e9e2a016144b.png",
+          image: "https://img.pccomponentes.com/articles/57/578903/1819-apple-iphone-13-pro-max-256gb-plata-libre.jpg",
+          seller: {
+            name: "María Gómez",
+            phone: "+502 3218 1393",
+            email: "mariagomez@gmail.com"
+          }
         },
         {
           id: 3,
