--- a/index.html
+++ b/index.html
@@ -861,8 +861,6 @@
         </div>
     </header>
 
-    <!-- Existing sections for dashboard, savings, debts, reports, budgets -->
-
     <div id="dashboard-section" class="section active">
       <div class="container">
         <div class="dashboard">
@@ -1107,19 +1105,6 @@
         </div>
       </div>
 
-      <div class="dashboard">
-        <div class="card">
-          <div class="card-header">
-            <h2>Reportes / Historial</h2>
-          </div>
-          <p style="padding: 20px;">
-            Aquí podrás consultar reportes detallados de tus ingresos, gastos y transacciones por categoría.
-            (Funcionalidad en desarrollo)
-          </p>
-        </div>
-      </div>
-    </div>
-
     <!-- Sección de Presupuestos -->
     <div id="budgets-section" class="section">
       <div class="card">
@@ -1175,18 +1160,18 @@
       </div>
     </div>
 
-    <!-- New Offers Section -->
+    <!-- seccion ofertas -->
     <div id="offers-section" class="section" aria-label="Sección de Ofertas de Venta">
       <div id="offers-search-container">
         <span class="material-icons" aria-hidden="true">search</span>
         <input type="search" id="offers-search" placeholder="Buscar ofertas: motos, teléfonos, ropa, carros..." aria-label="Buscar ofertas" />
       </div>
       <div id="offers-list" tabindex="0" aria-live="polite">
-        <!-- Inserts offer cards dynamically -->
+        <!-- aca se veran las ofertas -->
       </div>
     </div>
 
-    <!-- New Contact Section -->
+    <!-- Seccion contacto -->
     <div id="contact-section" class="section" aria-label="Información de Contacto y Soporte">
       <h2>Contacto y Soporte</h2>
       <div class="contact-info">
@@ -1196,7 +1181,7 @@
         </div>
         <div class="contact-item">
           <span class="material-icons" aria-hidden="true">phone</span>
-          <a href="tel:+50212345678">+502 1234 5678</a>
+          <a href="tel:+50212345678">+502 3218 1393</a>
         </div>
         <div class="contact-item">
           <span class="material-icons" aria-hidden="true">location_on</span>
@@ -1217,7 +1202,7 @@
     </footer>
 
     <script>
-      // Categories for income and expenses
+      // Categorias
       const categories = {
         income: ['Salario', 'Inversiones', 'Regalos', 'Ventas', 'Otros'],
         expense: [
@@ -1584,7 +1569,7 @@
         }, 300);
       });
 
-      // Show only the selected section and hide others
+      // Mostrar solo opcion seleccionada
       function showSection(section) {
         // Ocultar todas las secciones
         dashboardSection.classList.remove('active');
@@ -1954,7 +1939,7 @@ Ofertas relacionadas:
         budgets.forEach((b) => {
           const percent = Math.min((b.spent / b.amount) * 100, 100).toFixed(1);
           const overBudget = b.spent > b.amount;
-          const warningThreshold = 80; // percent to trigger alert
+          const warningThreshold = 80; // alerta de presupuesto
 
           const budgetEl = document.createElement('div');
           budgetEl.classList.add('budget-item');
@@ -2101,7 +2086,7 @@ Ofertas relacionadas:
         updateCategories();
       }
 
-      // Chatbot functionality
+      // Chatbot Funcionalidades
       (() => {
         const chatbotMessages = document.getElementById('chatbot-messages');
         const chatbotInput = document.getElementById('chatbot-input');
@@ -2278,7 +2263,7 @@ Ofertas relacionadas:
         });
       }
 
-      // Offers section - Facebook Marketplace style
+      // funcion ofertas 
 
       let offers = [
         {
@@ -2403,7 +2388,7 @@ Ofertas relacionadas:
         filterAndRenderOffers(e.target.value);
       });
 
-      // Render all offers initially at load
+      // Renderizar todas las ofertas inicialmente en local
       renderOffers(offers);
     </script>
 </body>
